catalytic_table_to_struct/example/src/non_compiling_code/failing_wrong_type_primitive.stderr
error[E0277]: the trait bound `i32: From<&str>` is not satisfied
 --> src/non_compiling_code/failing_wrong_type_primitive.rs
  |
  |     query!("select * from test_table where b = ? and c = ?", b, b);
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `From<&str>` is not implemented for `i32`
  |
  = help: the following other types implement trait `From<T>`:
            <i32 as From<bool>>
            <i32 as From<i8>>
            <i32 as From<i16>>
            <i32 as From<u8>>
            <i32 as From<u16>>
            <i32 as From<socket2::Domain>>
            <i32 as From<socket2::Type>>
            <i32 as From<socket2::Protocol>>
            <i32 as From<NonZeroI32>>
  = note: this error originates in the macro `query` (in Nightly builds, run with -Z macro-backtrace for more info)
